<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6F8B2"
    android:foregroundTint="#8895A7">

    <TextView
        android:id="@+id/name"
        android:layout_width="108dp"
        android:layout_height="57dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <TextView
        android:id="@+id/email"
        android:layout_width="170dp"
        android:layout_height="58dp"
        android:layout_marginEnd="36dp"
        android:text="@string/emailName"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476" />

    <Button
        android:id="@+id/LandingPageExitButton"
        android:layout_width="243dp"
        android:layout_height="65dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="84dp"
        android:backgroundTint="#709176"
        android:text="@string/sign_out_button"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/LandPagNewNote"
        android:layout_width="243dp"
        android:layout_height="65dp"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#709176"
        android:text="@string/nsaCreateNote"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/LandingPageExitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="102dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/sign_out_button"
        app:layout_constraintBottom_toBottomOf="@+id/landingPageHomeButton"
        app:layout_constraintStart_toEndOf="@+id/landingPageHomeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/nsa_find_note_button"
        android:layout_width="243dp"
        android:layout_height="65dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#709176"
        android:text="@string/nda_find_note_button"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/LandPagNewNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nsa_note_search_bar" />

    <EditText
        android:id="@+id/nsa_note_search_bar"
        android:layout_width="249dp"
        android:layout_height="47dp"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/search"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/noteSearchLabel"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="487dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="347dp"
        android:layout_height="207dp"
        android:layout_marginBottom="-30dp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/kowalski_noted" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="700dp"
        android:src="@drawable/mini_aesthetic_twonote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>